# TaxShieldAgent

./: .gitignore  .railwayignore  BUILD_PLAN.md  BUSINESS_MODEL.md  CHANGELOG.md  CLAUDE.md  LICENSE  OPERATIONS.md  ReadMe.md  ShieldAgent.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.py  stripe-app.json  tsconfig.json
.build/: ext.js  ext.min.js  ext.min.js.map  manifest.js
.claude/: IMPL_GUIDE.md  PHASE_PLAN.md  STRIPE_SUBMISSION.md
docs/: DOMAIN_AND_DEPLOYMENT_GUIDE.md  END_USER_GUIDE.md  MARKETING_PLAN.md  OWNER_OPERATIONS_GUIDE.md  STRIPE_SETUP.md  stripe_app_store.md  stripe_app_submission_checklist.md
docs/site/: index.html  privacy.html  terms.html
scripts/: install_railway.ps1  install_stripe_cli.py  railway_deploy.bat  set_railway_vars.py  setup_stripe_products.py  stripe_submit.bat
src/agent/: __init__.py  claude_agent.py  db.py  main.py  nexus_data.py  nexus_engine.py  notifier.py  remediator.py  webhook_handler.py
src/connectors/: amazon_csv.py  base.py  etsy_connector.py  paypal_connector.py  registry.py  shopify_connector.py  square_connector.py  stripe_connector.py  sync_orchestrator.py
src/payments/: __init__.py  billing.py  stripe_connect.py  subscriptions.py
src/views/: NexusOverview.tsx
src/web/api/: app.py
src/web/dashboard/: README.md  index.html  package-lock.json  package.json  (+1 more)
stripe_app/: ICON_NEEDED.md  create_icon.py  package-lock.json  package.json  tsconfig.json
stripe_app/src/: config.ts  index.ts
tests/: conftest.py  stress_test.py  test_nexus_engine.py
(+30 files in other folders)
