[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taxshieldagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "stripe>=15.0",
    "anthropic>=0.90",
    "fastapi>=0.135",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
